# HugoAura-Aikari

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .qmlformat.ini  .qmlls.ini.example  Aikari.sln  CMakeLists.txt  CMakePresets.json  Directory.Build.props  LICENSE  README.md  VSAnalysis.ruleset  vcpkg-configuration.json  vcpkg-next.json  vcpkg.json
Aikari-Launcher/: Aikari-Launcher.rc  Aikari-Launcher.vcxproj  Aikari-Launcher.vcxproj.filters  CMakeLists.txt  entrypoint.cpp  lifecycle.cpp  lifecycle.h  pch.h  resource.h  vcpkg-configuration.json  winSvcHandler.cpp  winSvcHandler.h
Aikari-Launcher/components/: config.cpp  config.h  threadMsgHandlers.cpp  threadMsgHandlers.h  wsMsgHandler.cpp  wsMsgHandler.h  wsServer.cpp  wsServer.h
Aikari-Launcher/includes/Aikari-Launcher-Private/: common.h
Aikari-Launcher/includes/Aikari-Launcher-Public/: version.h
Aikari-Launcher/includes/Aikari-Launcher-Public/constants/: lifecycle.h
Aikari-Launcher/includes/Aikari-Launcher-Public/infrastructure/: MessageQueue.hpp
Aikari-Launcher/includes/Aikari-Launcher-Public/virtual/: IConfigManager.h  IConfigPayload.h
Aikari-Launcher/infrastructure/: cliParse.cpp  cliParse.h  fileSystem.cpp  fileSystem.h  logger.cpp  logger.h  registry.cpp  registry.h  winSvc.cpp  winSvc.h
Aikari-Launcher/middleware/: wsAuthHandler.cpp  wsAuthHandler.h
Aikari-Launcher/public/virtual/: IConfigManager.cpp
Aikari-Launcher/resources/: default.json
Aikari-Launcher/routes/itc/: baseRoute.cpp  baseRoute.h  filesystem.cpp  filesystemRoute.cpp  filesystemRoute.h  network.cpp  network.h  networkRoute.cpp  networkRoute.h
Aikari-Launcher/routes/ws/: basicRoute.cpp  basicRoute.h  configRoute.cpp  configRoute.h
Aikari-Launcher/utils/: cryptoUtils.cpp  cryptoUtils.h  lifecycleUtils.cpp  lifecycleUtils.h  sslUtils.cpp  sslUtils.h  timeUtils.cpp  timeUtils.h  windowsUtils.cpp  windowsUtils.h
Aikari-Launcher/virtual/lifecycle/: ILaunchProgressReporter.h
Aikari-PLS/: Aikari-PLS.cpp  Aikari-PLS.h  Aikari-PLS.rc  Aikari-PLS.vcxproj  Aikari-PLS.vcxproj.filters  CMakeLists.txt  cpp.hint  dllmain.cpp  entrypoint.cpp  framework.h  init.cpp  init.h  lifecycle.cpp  lifecycle.h  pch.h  resource.h  vcpkg.json
Aikari-PLS/components/: mqttBroker.cpp  mqttBroker.h  mqttBrokerHandler.cpp  mqttBrokerHandler.h  mqttClient.cpp  mqttClient.h  mqttClientHandler.cpp  mqttClientHandler.h  mqttLifecycle.cpp
Aikari-PLS/components/infrastructure/: config.cpp  config.h
Aikari-PLS/components/mqtt/: mqttBroker.cpp  mqttBroker.h  mqttBrokerHandler.cpp  mqttBrokerHandler.h  mqttClient.cpp  mqttClient.h  mqttClientHandler.cpp  mqttClientHandler.h  mqttLifecycle.cpp  mqttLifecycle.h  mqttShared.cpp  mqttShared.h
Aikari-PLS/components/ruleSystem/: luaManager.cpp  luaManager.h  rulesManager.cpp  rulesManager.h
Aikari-PLS/components/ws/: dispatcher.cpp  dispatcher.h
Aikari-PLS/includes/Aikari-PLS/: Aikari-PLS-Exports.h
Aikari-PLS/includes/Aikari-PLS-Private/types/: lifecycleTypes.h
Aikari-PLS/includes/Aikari-PLS/types/: entrypoint.h
Aikari-PLS/infrastructure/: threadMsgHandler.cpp  threadMsgHandler.h
Aikari-PLS/resources/config/: default.json
Aikari-PLS/routes/ws/: configRoute.cpp  configRoute.h
Aikari-PLS/typesImpl/components/: mqtt.cpp  rules.cpp
Aikari-PLS/utils/: mqttPacketUtils.cpp  mqttPacketUtils.h  windowsApi.h
Aikari-Shared/: Aikari-Shared.vcxproj  Aikari-Shared.vcxproj.filters  CMakeLists.txt  framework.h  pch.h  vcpkg.json
Aikari-Shared/includes/Aikari-Shared/base/: SingleIns.hpp
Aikari-Shared/includes/Aikari-Shared/infrastructure/: PoolQueue.hpp  SinglePointMessageQueue.hpp  logger.h  loggerMacro.h  telemetry.h  telemetryShortFn.h
Aikari-Shared/includes/Aikari-Shared/utils/: crypto.h  cstring.h  filesystem.h  network.h  random.h  registry.h  string.h  windows.h
Aikari-Shared/includes/Aikari-Shared/virtual/: IConfigManager.h  IConfigPayload.h
Aikari-Shared/infrastructure/: logger.cpp  telemetry.cpp
Aikari-Shared/utils/: crypto.cpp  cstring.cpp  filesystem.cpp  network.cpp  random.cpp  registry.cpp  string.cpp
Aikari-Shared/utils/windows/: network.cpp  process.cpp  winString.cpp
Aikari-Shared/virtual/: IConfigManager.cpp
Aikari-Shared/virtual/itc/: IMainToSubMsgHandlerBase.cpp  ISubToMainMsgHandlerBase.cpp
Aikari-UI-Settings/: CMakeLists.txt  entrypoint.cpp  lifecycle.cpp  lifecycle.h
Aikari-UI-Settings/bridges/impl/: LifecycleBridge.h  LifecycleBridgeMock.cpp  LifecycleBridgeMock.h  ThemeBridge.cpp  ThemeBridge.h
Aikari-UI-Settings/bridges/virtual/: ILifecycleBridge.h  IThemeBridge.h
Aikari-UI-Settings/cmake/: RegQMLModules.cmake  RegQMLModulesFrontend.cmake
Aikari-UI-Settings/includes/Aikari-UI-Settings-Private/macros/: qLogger.h
Aikari-UI-Settings/includes/Aikari-UI-Settings-Public/constants/: entrypoint.h
Aikari-UI-Settings/infrastructure/: cliParse.cpp  cliParse.h  instances.cpp  instances.h  qmlFontInit.cpp  qmlFontInit.h
Aikari-UI-Settings/qml/: qml.qrc
Aikari-UI-Settings/qml/components/animations/: ComponentSnapMask.qml  PageAnimAgent.qml  PageSwipeHorizontal.qml  QMLModule.cmake  qmldir
Aikari-UI-Settings/qml/components/atom/: ElementFrameHorizontal.qml  ProgressBar.qml  ProgressCircular.qml  QMLModule.cmake  SideBar.qml  SideBarCommonItem.qml  SideBarGroupContainer.qml  SideBarGroupItem.qml  qmldir
Aikari-UI-Settings/qml/constants/: FontLoaders.qml  IconFont.js  MaterialSymbolsFont.js  QMLModule.cmake  ThemeStyle.qml  qmldir
Aikari-UI-Settings/qml/pages/: QMLModule.cmake
Aikari-UI-Settings/qml/routes/: QMLModule.cmake  Router.qml  qmldir
Aikari-UI-Settings/qml/utils/: connections.mjs
Aikari-UI-Settings/qml/views/: HomeView.qml  QMLModule.cmake  SplashView.qml  qmldir
Aikari-UI-Settings/qml/windows/: MainWindow.qml  QMLModule.cmake
Aikari-UI-Settings/resources/: qml.qrc
Aikari-UI-Settings/resources/constants/: FontLoaders.qml  ThemeStyle.qml  qmldir
Aikari-UI-Settings/resources/routes/: Router.qml  qmldir
Aikari-UI-Settings/resources/views/: SplashView.qml  qmldir
Aikari-UI-Settings/resources/windows/: MainWindow.qml
docs/: README.md
(+90 files in other folders)
